[YGH-626] fix Complete Registration button appearence on mobile

--- a/modules/membership.scss
+++ b/modules/membership.scss
@@ -57,7 +57,9 @@
   }
 
   .form-submit {
-    padding: 0 85px;
+    @include breakpoint('tablet') {
+      padding: 0 85px;
+    }
   }
 
   .js-form-type-membership-type-radio {
